<resources>
    <string name="app_name">Administrador de tareas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvide mi contraseña</string>
    <string name="remember_user_in_device">Recordar mi usuario en este dispositivo</string>
    <string name="start">Iniciar</string>
    <string name="dont_get_account">No tengo una cuenta</string>
    <string name="complete_name">Nombre Completo</string>
    <string name="registerme">Registrarme</string>
    <string name="have_account">Ya tengo una cuenta</string>
    <string name="create_account">Crear cuenta</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="recovery">Recuperar</string>
    <string name="is_required">Campo requerido</string>
    <string name="accept">Aceptar</string>
    <string name="recovery_email_sent">Hemos enviado un correo para que recuperes tu contraseña</string>

</resources>
