<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/recover_password"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEmail">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <TextView android:id="@+id/tvMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRecovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery"
        android:background="@color/colorAccent"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:visibility="gone"/>
</LinearLayout>